fix: 動作確認のステータスを更新し、未実施から手動確認に変更

--- a/現状.md
+++ b/現状.md
@@ -2,17 +2,7 @@
 
 ## 範囲と前提
 - 調査対象: フロントエンド/シミュレーション実装/ドキュメント一部
-- 動作確認: 未実施 (コードリードのみ)
-
-## 未実装
-- 日射/熱力学/水文学/気候区分がスタブのため、温度/降水/気候区分/全球平均などが実値になっていない
-  - 参照: `services/physics/insolation.ts`, `services/physics/thermodynamics.ts`, `services/physics/hydrology.ts`, `services/classification.ts`, `services/climateEngine.ts`, `components/Charts.tsx`, `components/visualizer/PixelRenderer.ts`
-- Step 4 (気流詳細) がスタブかつ描画モードが存在せず、表示が空になる
-  - 参照: `services/physics/airflow.ts`, `App.tsx`, `components/visualizer/PixelRenderer.ts`
-- システム診断は形だけで、実質的な検証がない
-  - 参照: `utils/testSuite.ts`, `components/TestOverlay.tsx`
-- カスタムマップ読込が反映されない
-  - 参照: `App.tsx`, `services/geography.ts`, `components/Controls.tsx`
+- 動作確認: 手動で実施
 
 ## バグ
 現状追跡なし
