docs: 不具合リストの更新

--- a/現状.md
+++ b/現状.md
@@ -32,3 +32,32 @@
   - 参照: `components/App.tsx`, `index.tsx`
 - Deprecated なデバッグ用モジュールが残存
   - 参照: `services/physics/oceanDebugger.ts`
+
+## 次に着手する内容（優先順・2026-02-14時点）
+> この節は「次に実施する計画」の記録。以下はいずれも未着手。
+
+1. Step 4 のプレースホルダ整備（黒画面回避）
+   - 目的: `Step 4` クリック時に未定義表示で誤解させない
+   - 対象: `App.tsx`, `components/MapVisualizer.tsx`, `components/visualizer/PixelRenderer.ts`
+   - 完了条件: `Step 4` 選択時に「未実装であること」が明示され、黒画面にならない
+
+2. Charts/診断に「Thermo/Hydro未実装」を明示
+   - 目的: 未計算値を実測値と誤認しない状態にする
+   - 対象: `components/Charts.tsx`, `utils/testSuite.ts`, `services/climateEngine.ts`
+   - 完了条件: 温度/降水/気候分類が未実装である旨が UI と診断に明示される
+
+3. OceanDebug ガイド整合（K/L相当）
+   - 目的: デバッグ表示の解釈ズレを減らす
+   - 対象: `components/OceanDebugView.tsx`, `App.tsx`
+   - 完了条件: セル境界は `90/cellCount` 推定ではなく `result.wind.cellBoundariesDeg` を優先して表示する
+
+4. 風帯の未使用パラメータ有効化（N相当）
+   - 目的: UI で変更した値がモデル挙動に反映される状態にする
+   - 対象: `services/physics/windBelts.ts`
+   - 対象パラメータ: `windDoldrumsWidthDeg`, `windTradePeakWidthDeg`
+   - 完了条件: 両パラメータ変更時に風帯プロファイルが変化する
+
+5. 再現性確保のため seed 導入
+   - 目的: 同一条件で同一結果を再生成可能にする
+   - 対象: `services/geography.ts`, `services/physics/ocean.ts`, `types.ts`, `constants.ts`
+   - 完了条件: 同じ seed + 同じ設定で結果が一致し、seed を変えると結果が変わる
