docs: 現状.mdを更新（実施済み項目と次優先タスクを整理）

--- a/現状.md
+++ b/現状.md
@@ -11,17 +11,21 @@
 - UIで操作できるパラメータと計算実装の乖離が大きく、変更が結果に反映されない箇所が多数
   - 参照: `components/Controls.tsx`, `services/physics/*.ts`, `services/climateEngine.ts`
 
+- 仕様が明文化されていない
+  - どういう状況がゴールなのか定められていない
+
 ## 未使用/死蔵パラメータ (効果なし)
-- 風帯: `windDoldrumsWidthDeg`, `windTradePeakWidthDeg` は計算に未使用
-  - 参照: `services/physics/windBelts.ts`, `constants.ts`, `types.ts`
+- 風帯: `windDoldrumsWidthDeg`, `windTradePeakWidthDeg` は **対応済み**（計算に反映）
+  - 参照: `services/physics/windBelts.ts`
 - 海流: `oceanShelfAngle`, `oceanDeflectLat`, `oceanSplitOffset`, `oceanCoastDist`, `oceanWestwardAttractionFactor`, `oceanEcPolewardDrift`, `oceanImpactThreshold` は計算に未使用
   - 参照: `services/physics/ocean.ts`, `constants.ts`, `types.ts`
 - 惑星/大気: `gravity`, `eccentricity`, `semiMajorAxis`, `solarLuminosity`, `perihelionAngle`, `greenhouseFactor`, `albedoLand`, `albedoOcean`, `albedoIce`, `lapseRate`, `heatCapacityOcean`, `meridionalTransport` は計算に未使用
   - 参照: `services/physics/*.ts`, `constants.ts`, `types.ts`
 
 ## 再現性/運用上の懸念
-- `Math.random()` が地形生成や海流の一部に使用され、同条件でも結果が再現しない
-  - 参照: `services/geography.ts`, `services/physics/ocean.ts`
+- **対応済み**: `seed` を `SimulationConfig` に導入し、地形生成・海流分岐を seed 駆動に変更
+  - 参照: `types.ts`, `constants.ts`, `components/Controls.tsx`, `services/geography.ts`, `services/physics/ocean.ts`
+  - 備考: 同じ `seed` + 同じ設定で再現可能
 
 ## パフォーマンス/UX
 - 重い計算をメインスレッドで実行するため、解像度が高いとUIフリーズの可能性が高い
@@ -33,31 +37,33 @@
 - Deprecated なデバッグ用モジュールが残存
   - 参照: `services/physics/oceanDebugger.ts`
 
-## 次に着手する内容（優先順・2026-02-14時点）
-> この節は「次に実施する計画」の記録。以下はいずれも未着手。
+## 今回の実施内容（2026-02-14）
+1. Step 4 のプレースホルダ整備（黒画面回避）: **完了**
+   - `Step 4` 選択時に未実装メッセージを表示し、黒画面回避
+   - 対象: `App.tsx`, `components/MapVisualizer.tsx`, `components/visualizer/PixelRenderer.ts`, `components/visualizer/Legend.tsx`
 
-1. Step 4 のプレースホルダ整備（黒画面回避）
-   - 目的: `Step 4` クリック時に未定義表示で誤解させない
-   - 対象: `App.tsx`, `components/MapVisualizer.tsx`, `components/visualizer/PixelRenderer.ts`
-   - 完了条件: `Step 4` 選択時に「未実装であること」が明示され、黒画面にならない
+2. Charts/診断に「Thermo/Hydro未実装」を明示: **完了**
+   - 温度/降水/気候分類が未実装である旨を UI と診断で表示
+   - 対象: `components/Charts.tsx`, `utils/testSuite.ts`, `services/climateEngine.ts`, `types.ts`
 
-2. Charts/診断に「Thermo/Hydro未実装」を明示
-   - 目的: 未計算値を実測値と誤認しない状態にする
-   - 対象: `components/Charts.tsx`, `utils/testSuite.ts`, `services/climateEngine.ts`
-   - 完了条件: 温度/降水/気候分類が未実装である旨が UI と診断に明示される
-
-3. OceanDebug ガイド整合（K/L相当）
-   - 目的: デバッグ表示の解釈ズレを減らす
+3. OceanDebug ガイド整合（K/L相当）: **完了**
+   - セル境界は `result.wind.cellBoundariesDeg` を優先表示（なければ `90/cellCount` にフォールバック）
    - 対象: `components/OceanDebugView.tsx`, `App.tsx`
-   - 完了条件: セル境界は `90/cellCount` 推定ではなく `result.wind.cellBoundariesDeg` を優先して表示する
 
-4. 風帯の未使用パラメータ有効化（N相当）
-   - 目的: UI で変更した値がモデル挙動に反映される状態にする
+4. 風帯の未使用パラメータ有効化（N相当）: **完了**
+   - `windDoldrumsWidthDeg`, `windTradePeakWidthDeg` を風帯プロファイルに反映
    - 対象: `services/physics/windBelts.ts`
-   - 対象パラメータ: `windDoldrumsWidthDeg`, `windTradePeakWidthDeg`
-   - 完了条件: 両パラメータ変更時に風帯プロファイルが変化する
 
-5. 再現性確保のため seed 導入
-   - 目的: 同一条件で同一結果を再生成可能にする
-   - 対象: `services/geography.ts`, `services/physics/ocean.ts`, `types.ts`, `constants.ts`
-   - 完了条件: 同じ seed + 同じ設定で結果が一致し、seed を変えると結果が変わる
+5. 再現性確保のため seed 導入: **完了**
+   - `seed` を設定に追加し、地形生成・海流分岐を seed 駆動に変更
+   - 対象: `services/geography.ts`, `services/physics/ocean.ts`, `types.ts`, `constants.ts`, `components/Controls.tsx`, `App.tsx`
+
+## 次に着手する内容（更新後）
+1. 海流の未使用パラメータ有効化
+   - 対象: `services/physics/ocean.ts`, `constants.ts`, `types.ts`
+2. 惑星/大気パラメータの熱・水文モデル反映
+   - 対象: `services/physics/*.ts`, `services/climateEngine.ts`
+3. メインスレッド負荷の軽減（UIフリーズ対策）
+   - 対象: `services/climateEngine.ts`, `services/physics/ocean.ts`, `components/OceanDebugView.tsx`
+4. 不要コードの整理
+   - 対象: `components/App.tsx`, `services/physics/oceanDebugger.ts`
